@@ -1,3 +1,8 @@
+Nov 4, 2002
+
+* FIXED: Fetching VARCHAR/VARBINARY columns with value NULL and column-width
+  > 1024.  Mike Elston.
+
 Oct 24, 2002
 
 * FIXED: Work around SQL Server bug reporting the number of columns in
